Fix horizontal scrolling glitch

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,6 @@
 
 .mission-container {
   display: flex;
-  justify-content: space-around;
   margin-left: auto;
   margin-right: auto;
 }
